# jtech

./: .gitignore  CMakeLists.txt  Makefile  README.md
docs/: basic_engine_uml.dia  graphics_detail_view.dia
include/: jdebug.h  jobject.h
include/core/: jGame.h
include/math/: jmatrix.h  jtech_matrix.h  jtech_vector.h  jvector.h
include/util/: jtech_utility.h
src/: jdebug.cpp  main.cpp
src/math/: jmatrix2x2.cpp  jtech_vector.cpp  jvector3.cpp
src/math/matrix/: jcmatrix2x2.cpp  jmatrix2x2.cpp  jmatrix3x3.cpp  jrmatrix2x2.cpp
src/math/vector/: jvector2.cpp  jvector3.cpp  jvector4.cpp
src/tests/: jtech_math_test.cpp
src/util/: jtech_utility.cpp
