################################################################################
## CMakeLists.txt
## Author: justin.renga@gmail.com
## jtech Engine
## 
## Copyright (c) 2012, Authors
## All rights reserved.
##
## Redistribution and use in source and binary forms, with or without
## modification, are permitted provided that the following conditions are met:
##
## Redistributions of source code must retain the above copyright notice, this
## list of conditions and the following disclaimer.
##
## Redistributions in binary form must reproduce the above copyright notice,
## this list of conditions and the following disclaimer in the documentation
## and/or other materials provided with the distribution.
##
## THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
## AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
## IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
## ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
## LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
## CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
## SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
## INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
## CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
## ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF
## THE POSSIBILITY OF SUCH DAMAGE.
################################################################################
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )
PROJECT ( JTECH )

# Set up versioning information
SET( JTECH_VERSION_MAJOR 0 )
SET( JTECH_VERSION_MINOR 1 )
SET( JTECH_VERSION "${JTECH_VERSION_MAJOR}.${JTECH_VERSION_MINOR}" )

SET( CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${JTECH_SOURCE_DIR}/cmake )

AUX_SOURCE_DIRECTORY("./src" SOURCES)
AUX_SOURCE_DIRECTORY("./src/math" SOURCES_MATH)
#AUX_SOURCE_DIRECTORY("./src/tests" SOURCES_TESTS)

#MESSAGE("${SOURCES_MATH}")
#MESSAGE("${SOURCES_TESTS}")

INCLUDE_DIRECTORIES("./include")

SET(EXECUTABLE_NAME "jtech.out")
#ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SOURCES_MATH} ${SOURCES_TESTS})
ADD_EXECUTABLE(${EXECUTABLE_NAME} ${SOURCES} ${SOURCES_MATH})

#THIS IS NOT GOING TO BE REQUIRED, SINCE IT WILL NOT BE USED
#FOR THE ENGINE (I KNOW, I'M A MASOCIST)
#FIND_PACKAGE( GLFW REQUIRED )
#TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${GLFW_LIBRARIES})

FIND_PACKAGE( OpenGL REQUIRED )
INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${OPENGL_LIBRARIES})

# THIS WILL NOT BE INCLUDED EITHER
#FIND_PACKAGE( GLEW REQUIRED )
#INCLUDE_DIRECTORIES(${GLEW_INCLUDE_PATH})
#TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${GLEW_LIBRARY})

FIND_PACKAGE( Threads )
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${CMAKE_THREAD_LIBS_INIT})

IF (WIN32)
ELSE(WIN32)
FIND_PACKAGE( X11 )
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${X11_LIBRARY})

FIND_PACKAGE ( XRandR )
TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} ${XRandR_LIBRARY})

TARGET_LINK_LIBRARIES(${EXECUTABLE_NAME} rt)
ENDIF(WIN32)

INSTALL (TARGETS ${EXECUTABLE_NAME} DESTINATION "./bin")

